--- a/style.css
+++ b/style.css
@@ -66,6 +66,11 @@ li.nav-item {
   /* background-color: rgba(0,0,0,0.3); */
   padding: 5px;
 }
+.btn-secondary {
+    color: #fff;
+    background-color: #413411;
+    border-color: #413411;
+}
 .logo {
   height: 65%;
   min-height: 250px;
