Correccion nosotros.html

--- a/includes/nosotros.html
+++ b/includes/nosotros.html
@@ -17,7 +17,7 @@
               <br>
               <br>
               <p class="lead">
-                Somo empresa 100% Chihuahuense dedicada al
+                Somos empresa 100% Chihuahuense dedicada al
                 suministro de <strong>Ganado Pinto</strong> para Engorda.
               </p>
               <br>
