Ajustments for responsive screens

--- a/includes/nosotros.html
+++ b/includes/nosotros.html
@@ -10,10 +10,10 @@
       <div class="modal-body">
         <div class="container-fluid">
           <div class="row">
-            <div class="col">
+            <div class="col-sm">
               <img src="assets/img/corrales.jpg" class="rounded" alt="imagen de corrales">
             </div>
-            <div class="col aling-middle">
+            <div class="col-sm aling-middle">
               <br>
               <br>
               <p class="lead">
