--- a/includes/clientes.html
+++ b/includes/clientes.html
@@ -9,16 +9,16 @@
       </div>
       <div class="modal-body">
           <div class="row my-1">
-            <div class="col">
+            <div class="col col-sm-3">
               <img src="assets/img/sukarne.png" class="rounded" alt="imagen de corrales">
             </div>
-            <div class="col">
+            <div class="col col-sm-3">
               <img src="assets/img/losfertres.jpg" class="rounded" alt="imagen de corrales">
             </div>
-            <div class="col">
+            <div class="col col-sm-3">
               <img src="assets/img/rancho.jpg" class="rounded" alt="imagen de corrales">
             </div>
-            <div class="col">
+            <div class="col col-sm-3">
               <img src="assets/img/grupobona.png" class="rounded" alt="imagen de corrales">
             </div>
           </div>
